android-platform-system-core (1:6.0.0+r26-1) UNRELEASED; urgency=medium

  * New upstream release
  * Use traditional import-orig way to fetch source
  * Change version scheme to follow upstream
  * Makefiles independent from Quilt
  * New binary packages:
      - adb
      - android-androidconfig-dev
      - android-libadb(-dev)
      - android-libbacktrace(-dev)
      - android-libbase(-dev)
      - android-libsparse(-dev)
      - android-libutils(-dev)
      - android-libziparchive(-dev)
      - fastboot
  * Remove android-libzipfile(-dev): Removed from upstream
  * Add myself to Uploaders
  * New patches:
    - disable_android_set_abort_message.diff
    - add_missing_headers.diff: Various headers are missing which causes
      compiler errors
    - use_separated_cutils_atomic.diff: cutils/atomic.h uses stdatomic.h which
      is not supported by C++11
  * d/control:
    - Add Build-Depends: uuid-dev
    - Add (Build-)Depends: f2fs-libs(-dev)
    - Add (Build-)Depends: android-libselinux(-dev)
    - Add (Build-)Depends: android-libunwind(-dev)
    - Change architecture to x86, ARM and MIPS (Linux only)
    - Fix Vcs-Git typo
    - Homepage change to android.googlesource.com: Upstream composed of multiple
      repositories.
    - Update android-liblog(-dev) package description

 -- Kai-Chung Yan <seamlikok@gmail.com>  Tue, 17 Nov 2015 14:39:17 +0800

android-platform-system-core (21-6) unstable; urgency=low

  [Simon McVittie]
  * fix missing android_atomic_* symbols on i386 (Closes: #769646)

 -- Hans-Christoph Steiner <hans@eds.org>  Fri, 28 Nov 2014 13:00:09 +0100

android-platform-system-core (21-5) unstable; urgency=low

  [Simon McVittie]
  * For each library where libwhatever.so moved from android-libwhatever
    to android-libwhatever-dev, the -dev Breaks/Replaces the runtime library
    (Closes: #770328)

 -- Hans-Christoph Steiner <hans@eds.org>  Tue, 25 Nov 2014 12:43:50 +0100

android-platform-system-core (21-4) unstable; urgency=low
